--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,7 @@ button {
     padding-bottom: 100px;
   }
 
-  .project {
+  .prestasi {
     padding-bottom: 80px;
   }
 
@@ -447,10 +447,6 @@ button {
     margin: 5px;
   }
 
-  .project-content {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
   .footer {
     padding: 20px 10%;
   }
@@ -463,10 +459,6 @@ button {
 
   .home-img2 img {
     width: 40vw;
-  }
-
-  .project-content {
-    grid-template-columns: 1fr;
   }
 
   .contact form .input-box input {
