--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,9 @@
 body {
   font-size: 62%;
   overflow-x: hidden;
-  background: #F1F6F9;
+  background-color: #F1F6F9;
   color: #14274E;
+  text-transform: uppercase;
 }
 
 section {
@@ -77,7 +78,7 @@ nav ul li a:hover {
 .menu-icon {
   display: none;
   font-size: 20px;
-  color: white;
+  color: #F1F6F9;
 }
 /* navbar-end */
 
@@ -128,13 +129,13 @@ nav ul li a:hover {
   background: transparent;
   border: 2px solid #495464;
   border-radius: 50%;
-  font-size: 18px;
+  font-size: 20px;
   color: #495464;
   margin: 12px 20px 12px 0;
 }
 
 .social-media a:hover {
-  background: #495464;
+  background-color: #14274E;
   color: #F1F6F9;
 }
 /* home-end */
@@ -145,7 +146,6 @@ nav ul li a:hover {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #F1F6F9;
 }
 
 .about-img img {
@@ -164,10 +164,6 @@ nav ul li a:hover {
 /* about-end */
 
 /* skills */
-.skills {
-  background: #F1F6F9;
-}
-
 .skills-content {
   display: flex;
   justify-content: center;
@@ -197,137 +193,117 @@ nav ul li a:hover {
 }
 /* skills-end */
 
-/* prestasi */
-.prestasi {
+/* achievement */
+.content {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  min-height: auto;
-  padding-bottom: 80px;
-}
-
-.prestasi h1 {
-  margin-top: 5%;
-}
-
-.prestasi-column .prestasi-box {
-  border-left: 3px solid #9BA4B4;
-}
-
-.prestasi-box .prestasi-content {
-  position: relative;
-  padding-left: 30px;
-}
-
-.prestasi-box .prestasi-content::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -15px;
-  width: 25px;
-  height: 25px;
-  background: #14274E;
-  border-radius: 50%;
-}
-
-.prestasi-content .content {
-  position: relative;
-  padding: 8px;
-  border: 3px solid #14274E;
-  border-radius: 10px;
-  margin-bottom: 10px;
-  overflow: hidden;
-}
-
-.prestasi-content .content::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background: transparent;
-  z-index: -1;
-}
-
-.prestasi-content .content:hover::before {
-  width: 100%;
-}
-
-.prestasi-content .content .year {
-  font-size: 20px;
-  color: #14274E;
-  padding-bottom: 10px;
-}
-
-.prestasi-content .content .year {
-  padding-right: 8px;
-}
-
-.prestasi-content .content h3 {
-  font-size: 15px;
-  margin-left: 5px;
-}
-
-.prestasi-content .content p {
-  font-size: 15px;
-  padding-top: 8px;
-}
-
-/* Prestasi-end */
-
-/* contact */
-.contact {
-  background-color: #F1F6F9;
-}
-
-.contact h2 {
-  font-size: 30px;
   text-align: center;
 }
 
-.contact form {
-  max-width: 900px;
-  margin: 5px auto;
-  text-align: right;
+.content .card {
+  margin: 5px 20px;
 }
 
-.input-box {
+.content .card img {
+  width: 100%;
+  height: auto;
+  border: 2px solid #14274E;
+  border-radius: 15px;
+}
+
+.content .card h2 {
+  margin: 10px 0;
+  padding: 5px;
+  font-size: 25px;
+  background-color: #14274E;
+  color: #F1F6F9;
+  border: 2px solid #9BA4B4;
+  border-radius: 15px;
+}
+
+.content .card h4 {
+  font-size: 16px;
+  line-height: 1.5;
+  border: 2px solid #14274E;
+  border-radius: 15px;
+}
+/* achievement-end */
+
+/* contact */
+.contact-container {
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  align-items: center;
 }
 
-.contact form .input-box input,
-.contact form textarea {
-  width: 100%;
-  padding: 10px;
-  font-size: 18px;
+
+.contact-info {
   color: #F1F6F9;
-  background: #14274E;
+  max-width: 300px;
+  margin: 60px;
+  font-size: 15px;
+  border: 2px solid #9BA4B4;
+  background-color: #14274E;
   border-radius: 15px;
-  margin: 10px 0;
 }
 
-.contact form .input-box input {
-  width: 32%;
+.contact-info i {
+  margin: 15px;
+  font-size: 20px;
 }
 
-.contact form textarea {
+.contact-form {
+  max-width: 600px;
+  margin-right: 50px;
+}
+
+.contact-info, .contact-form {
+  flex: 1;
+}
+
+.contact-form .text-box {
+  background-color: #14274E;
+  color: #F1F6F9;
+  border: 2px solid #9BA4B4;
+  width: 100%;
+  height: 40px;
+  padding: 12px;
+  font-size: 15px;
+  border-radius: 15px;
+  margin-bottom: 10px;
+}
+
+.contact-form textarea {
+  background-color: #14274E;
+  color: #F1F6F9;
+  border: 2px solid #9BA4B4;
+  width: 100%;
+  padding: 12px;
+  font-size: 15px;
+  min-height: 200px;
+  max-height: 300px;
   resize: none;
+  border-radius: 15px;
+  margin-bottom: 10px;
 }
 
 button {
-  display: inline-block;
   padding: 10px 50px;
-  background: #495464;
+  background-color: #14274E;
   border-radius: 15px;
   font-size: 15px;
   color: #F1F6F9;
   letter-spacing: 1px;
   font-weight: 600;
   cursor: pointer;
+  float: inline-end;
+}
+
+button:hover {
+  background-color: #9BA4B4;
+  color: #14274E;
 }
 /* contact-end */
 
@@ -338,7 +314,7 @@ button {
   align-items: center;
   flex-wrap: wrap;
   padding: 20px 10%;
-  background: #14274E;
+  background-color: #14274E;
 }
 
 .footer-text p {
@@ -347,18 +323,18 @@ button {
 }
 
 .footer-icon a i {
-  display: inline-flex;
+  display: flex;
   padding: 5px;
-  background: #F1F6F9;
-  border-radius: 10px;
-  font-size: 30px;
+  background-color: #F1F6F9;
+  border-radius: 5px;
+  font-size: 25px;
   color: #14274E;
 }
 
 /* footer-end */
 
 /* Responsive */
-@media only screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .home-content h1 {
     font-size: 40px;
   }
@@ -368,7 +344,7 @@ button {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .menu-icon {
     display: flex;
     align-items: center;
@@ -420,12 +396,33 @@ button {
     margin: 5px;
   }
 
+  .content {
+    flex-direction: column;
+}
+
+  .contact-container {
+    flex-direction: column;
+  }
+
+  .contact-info, .contact-form {
+    margin: 10px 50px;
+    width: 100%;
+}
+
+.contact-form h2 {
+    font-size: 30px;
+}
+
+.contact-form .text-box {
+    width: 100%;
+}
+
   .footer {
     padding: 20px 10%;
   }
 }
 
-@media only screen and (max-width: 425px) {
+@media (max-width: 425px) {
   .home-img1 img {
     width: 40vw;
   }
@@ -434,7 +431,7 @@ button {
     width: 40vw;
   }
 
-  .contact form .input-box input {
+  .contact-form {
     width: 100%;
   }
 
@@ -449,7 +446,7 @@ button {
   }
 }
 
-@media only screen and (max-width: 375px) {
+@media (max-width: 375px) {
   .about-img img {
     width: 60vw;
   }
